feat: make workspaces globally visible
