# backend/openapi.json
@@ -3076,6 +3076,10 @@
             "type": "string",
             "title": "Id"
           },
+          "team_id": {
+            "type": "string",
+            "title": "Team Id"
+          },
           "name": {
             "type": "string",
             "title": "Name"
@@ -3147,6 +3151,7 @@
         "type": "object",
         "required": [
           "id",
+          "team_id",
           "name",
           "client",
           "objective",
@@ -3878,7 +3883,14 @@
             "title": "Name"
           },
           "role": {
-            "$ref": "#/components/schemas/TeamRole"
+            "anyOf": [
+              {
+                "$ref": "#/components/schemas/TeamRole"
+              },
+              {
+                "type": "null"
+              }
+            ]
           },
           "members": {
             "items": {
